welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "R") {
              ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "L") {
             ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "I") {
              ^BDRBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "A") {
              ^BDRBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "B") {
              ^BDRBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "C") {
              ^BDRBuggle:30: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "Z") {
              ^BDRBuggle:33: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "Y") {
              ^BDRBuggle:37: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x = "X") {
              ^